# eliza-tauri-project

./: MVP_STATUS.md  final_integration_test.cjs  index.html  package-lock.json  package.json  tailwind.config.js  test_cli_execution.js  test_integration.cjs  vite.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: cli_handler.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  mod.rs  preflight.rs  process.rs  telemetry.rs  terminal.rs
src/components/Runner/: RunnerPage.tsx
src/components/Settings/: SettingsPage.tsx
src/components/Terminal/: TerminalPage.tsx
src/stores/: appStore.ts  configStore.ts  runnerStore.ts  terminalStore.ts
src/types/: index.ts
