[package]
name = "mvp-tauri-eliza-cli"
version = "0.1.0"
description = "MVP Tauri ElizaOS CLI - Desktop client for running ElizaOS CLI with Sandbox integration"
authors = ["ElizaOS Team"]
edition = "2021"

[lib]
name = "mvp_tauri_eliza_cli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

